[package]
name = "linscan"
version = "0.1.0"
edition = "2021"
default-run = "main"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "linscan"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rayon = "1.7.0"

[[bin]]
name = "main"
path = "src/main.rs"


